<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.clase.motorton.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.clase.motorton.ui.search.SearchFragment"
        android:label="@string/title_busqueda"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.clase.motorton.ui.perfil.MyPerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_createEvent"
        android:name="com.clase.motorton.ui.eventos.CreateEventFragment"
        android:label="@string/title_crear"
        tools:layout="@layout/fragment_create_event" />

    <fragment
        android:id="@+id/navigation_mapa"
        android:name="com.clase.motorton.ui.mapas.MapaFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_mapa" />
</navigation>